--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-10 mb-5">
+<div class="container my-5 pt-5">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
         <div class="col" *ngFor="let project of listProjects">
             <div class="card text-center">
