--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container my-6">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 py-5 ">
         <div class="col" *ngFor="let project of listProjects">
             <div class="card text-center">
