padding top only

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 py-5 ">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 pt-5 ">
         <div class="col" *ngFor="let project of listProjects">
             <div class="card text-center">
                 <img [src]="project.img" class="card-img-top" alt="project.name">
