--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
         <div class="col">
             <h1 class="title-name">Juan Soledad</h1>
             <h5>Portfolio</h5>
+            <a target="_blank" href="../../assets/Curriculum Vitae.pdf" class="btn btn-outline-dark my-2">View Resume</a>
         </div>
     </div>
 </div>
