--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center py-5">
+<div class="container text-center">
     <div class="row align-items-center">
         <div class="col">
             <h1 class="title-name">Juan Soledad</h1>
